packages/llvm/src/tests/snapshots/llvm__tests__const _y = 1;             const x = ((1 + 1)) + ((_y)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_y = alloca double, align 8
  store double 1.000000e+00, double* %_y, align 8
  %x = alloca double, align 8
  %"5" = load double, double* %_y, align 8
  %"1" = fadd double 2.000000e+00, %"5"
  store double %"1", double* %x, align 8
  ret void
}

